[package]
name = "astor"
version = "0.3.0"
edition = "2024"
description = "A fast, minimal HTTP framework for reverse-proxy deployments"
license = "MIT"
readme = "README.md"
repository = "https://github.com/benjaminPla/astor"
homepage = "https://github.com/benjaminPla/astor"
documentation = "https://docs.rs/astor"
keywords = ["async", "framework", "http", "tokio", "web"]
categories = ["web-programming::http-server", "asynchronous"]
exclude = ["todo.md", "CONTRIBUTING.md", ".gitignore"]

[dependencies]
matchit = "0.8"
tokio   = { version = "1", features = ["net", "rt-multi-thread", "macros", "signal", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "basic"
path = "examples/basic.rs"
